Fixed .portlet-title-text which were cropped before. Fixed close button on rp-dialog. Positioned .quick-access-overlay with !important styling to overcome positioning issue.

--- a/core-bc/modules/theme/src/main/webapp/css/custom_base.css
+++ b/core-bc/modules/theme/src/main/webapp/css/custom_base.css
@@ -284,6 +284,10 @@
       z-index: 3;
   }
 
+  .portlet-title-text {
+      overflow: visible;
+  }
+
   a.rp-link,
   a.rp-link:visited {
     background: url(../images/icons/link-icon.png) 0 50% no-repeat;
